k8s/apps/bitwarden/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden
  labels:
    app: bitwarden
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bitwarden
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      containers:
        - name: bitwarden
          image: vaultwarden/server:1.34.3-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: bitwarden
              mountPath: /data
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              memory: 256Mi
      volumes:
        - name: bitwarden
          persistentVolumeClaim:
            claimName: bitwarden
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
