k8s/apps/bitwarden/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
spec:
  type: ClusterIP
  selector:
    app: bitwarden
  ports:
    - name: http
      port: 80
      targetPort: 8080
